# nymeria

./: .gitignore  LICENSE  README.md  package.json  tsconfig.json
esp32/: .gitignore  platformio.ini
esp32/src/: LedController.cpp  LedController.h  State.cpp  State.h  WifiHelper.cpp  WifiHelper.h  main.cpp
mac/: index.html  package.json  pnpm-lock.yaml
mac/src/: App.tsx  index.ts  styles.css
mac/src-tauri/: Cargo.toml  tauri.conf.json
mac/src-tauri/icons/: icon.icns
mac/src-tauri/src/: client.rs  main.rs  mic.rs  sign_client.rs  state_manager.rs  tray.rs
mac/src/components/MenuItem/: index.css  index.tsx
mac/src/components/Separator/: index.css  index.tsx
mac/src/components/StateChanger/: index.css  index.tsx
mac/src/domain/: state.ts
mac_agent/: package.json  tsconfig.json
mac_agent/src/: index.ts
src/: http-server.ts  index.ts  slack.ts  teams.ts  types.ts
