[package]
name = "Nymeria"
version = "0.0.1"
description = "The Nymeria app"
authors = ["joaovfsousa@gmail.com"]
license = "MIT"
repository = "https://github.com/joaovfsousa/nymeria"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "macos-private-api", "system-tray", "shell-open", "icon-png"] }
reqwest = {version = "0.11.24", features = ["blocking"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
